<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <!-- Password Field -->

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/photostext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_photos"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:columnCount="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:rowCount="2"
        app:layout_constraintTop_toBottomOf="@+id/photostext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458">

        <!-- Placeholder ImageViews for the 2x3 grid -->
        <ImageView
            android:id="@+id/imageView11"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_first_photo"
            android:onClick="checkPermissions" />

        <ImageView
            android:id="@+id/imageView12"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_second_photo"
            android:onClick="checkPermissions" />

        <ImageView
            android:id="@+id/imageView13"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_third_photo"
            android:onClick="checkPermissions" />

        <ImageView
            android:id="@+id/imageView21"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_fourth_photo"
            android:onClick="checkPermissions" />

        <ImageView
            android:id="@+id/imageView22"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_fifth_photo"
            android:onClick="checkPermissions" />

        <ImageView
            android:id="@+id/imageView23"
            style="@style/GridImageView"
            android:contentDescription="@string/upload_sixth_photo"
            android:onClick="checkPermissions" />

    </GridLayout>


    <TextView
        android:id="@+id/FNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/enter_first_name"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FNameTextView" />


    <TextView
        android:id="@+id/LNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LNameTextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_last_name"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#87CEEB"
        android:text="@string/submit"
        android:onClick="uploadProfile"
        app:layout_goneMarginTop="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="706dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />




</androidx.constraintlayout.widget.ConstraintLayout>